# chrome-ec

./: .git-blame-ignore-revs  Makefile  Makefile.rules  Makefile.toolchain  firmware_builder.py
common/: audio_codec_wov.c  battery.c  battery_v2.c  body_detection.c  build.mk  cbi.c  cec.c  charge_manager.c  charge_state.c  chipset.c  dps.c  ec_features.c  extpower_common.c  extpower_gpio.c  flash.c  fmap.c  host_command_controller.c  host_event_commands.c  keyboard_8042.c  keyboard_protocol_stub.c  lid_angle.c  lid_angle_common.c  lid_switch.c  lightbar.c  motion_sense.c  motion_sense_fifo.c  online_calibration.c  panic_output.c  peripheral_charger.c  port80.c  power_button.c  queue.c  recursive_mutex.c  rollback.c  sha256.c  shared_mem_libc.c  shmalloc.c  spi_flash.c  spi_nor.c  switch.c  (+10 more)
docs/: ap-ec-comm.md  ectool_rust_porting.md  llvm_toolchain.md  reducing_ec_image_size.md  sitemap.md
driver/: accel_bma4xx.c  accel_bma4xx.h  accel_lis2ds.c  accel_lis2dw12.c  accelgyro_bmi260.c  accelgyro_bmi3xx.c  accelgyro_icm42607.h  accelgyro_icm426xx.h  accelgyro_lsm6dsm.c  accelgyro_lsm6dsm.h  build.mk  (+1 more)
zephyr/program/bluey/: BUILD.py  CMakeLists.txt  Kconfig  adc.dtsi  battery.dtsi  bluey_stub.dtsi  common.dtsi  fan.dtsi  gpios.dtsi  i2c.dtsi  interrupts.dtsi  program.conf  psl.dtsi
zephyr/program/bluey/bluey/: fan.dtsi  gpios.dtsi  project.conf  project.overlay
zephyr/program/bluey/quartz/: battery.dtsi  fan.dtsi  gpios.dtsi  project.conf  project.overlay
zephyr/program/bluey/quenbi/: gpios.dtsi  project.conf  project.overlay
zephyr/program/bluey/src/: chipset.c  switchcap.c
zephyr/program/fatcat/: BUILD.py  CMakeLists.txt  Kconfig  dsp_comms.conf  rvp_keyboard.dtsi  rvp_program.conf
zephyr/program/fatcat/fatcat_it82002aw/: gpios.dtsi
zephyr/program/fatcat/fatcatrvp-ite/: generated.dtsi  i2c.dtsi  keyboard.dtsi  project.conf  project.overlay
zephyr/program/fatcat/fatcatrvp-npcx/: generated.dtsi  gpios.dtsi  i2c.dtsi  keyboard.dtsi  project.conf  project.overlay
zephyr/program/fatcat/felino/: CMakeLists.txt  battery.dtsi  fan.dtsi  gpios.dtsi  hibernate.dtsi  interrupts.dtsi  keyboard.dtsi  power_signals.dtsi  project.conf  project.overlay  temp_sensors.dtsi  usb_typec.dtsi
zephyr/program/fatcat/felino/src/: board_power.c  charger.c  keyboard_customization.c
zephyr/program/fatcat/felino4es/: CMakeLists.txt  project.conf  project.overlay
zephyr/program/fatcat/francka/: gpios.dtsi  keyboard.dtsi  overlay.dtsi  project.conf  thermal.dtsi
zephyr/program/fatcat/francka/include/: keyboard_customization.h
zephyr/program/fatcat/francka/src/: board_power.c
zephyr/program/fatcat/kinmen/: fan.dtsi  gpios.dtsi  hibernate.dtsi  i2c.dtsi  interrupts.dtsi  keyboard.dtsi  kinmen_vif.xml  led_policy.dtsi  power_signals.dtsi  project.conf  project.overlay  pwm.dtsi  usb_typec.dtsi
zephyr/program/fatcat/kinmen-ish/: gpio.dtsi  interrupts_motionsense.dtsi  motionsense.dtsi  project.conf  project.overlay
zephyr/program/fatcat/kinmen/src/: board_power.c  suspend_resume.c
zephyr/program/fatcat/lapis/: CMakeLists.txt  battery.dtsi  console.dtsi  fan.dtsi  gpios.dtsi  hibernate.dtsi  i2c.dtsi  interrupts.dtsi  keyboard.dtsi  led_pins.dtsi  led_policy.dtsi  power_signals.dtsi  project.conf  project.overlay  pwm.dtsi  temp_sensors.dtsi  usb_typec.dtsi  usba.dtsi
zephyr/program/fatcat/lapis/include/: keyboard_customization.h
zephyr/program/fatcat/lapis/src/: board_power.c  keyboard_customization.c
zephyr/program/fatcat/moonstone/: moonstone_vif.xml  project.conf  project.overlay
zephyr/program/fatcat/moonstone-ish/: i2c.dtsi  motionsense.dtsi  project.conf  project.overlay
zephyr/program/fatcat/moonstone/include/: board.h
zephyr/program/fatcat/moonstone/src/: suspend_resume.c
zephyr/program/ocelot/: BUILD.py  CMakeLists.txt  Kconfig  ite_hibernate.dtsi  power_signals.dtsi  program.conf  rvp_battery.dtsi  rvp_fans.dtsi  rvp_i2c.dtsi  rvp_interrupts.dtsi  rvp_ioex_gpio.dtsi  rvp_keyboard.dtsi  rvp_motionsense.dtsi  rvp_power.conf  rvp_program.conf  rvp_temp_sensors.dtsi  rvp_usba.dtsi  rvp_usbc.dtsi
zephyr/program/ocelot/include/: keyboard_customization.h
zephyr/program/ocelot/matsu/: battery.dtsi  fan.dtsi  gpios.dtsi  i2c.dtsi  interrupts.dtsi  keyboard.dtsi  led_pins.dtsi  power_signals.dtsi  project.conf  project.overlay  pwm.dtsi  usb_typec.dtsi
zephyr/program/ocelot/matsu/src/: board_power.c  keyboard_customization.c  suspend_resume.c  touch_panel.c
zephyr/program/ocelot/ocelot-ish/: i2c.dtsi  interrupts.dtsi  motionsense.conf  prj.conf
zephyr/program/ocelot/ocelot-ish/ocelotrvp-ish/: gpio.dtsi  project.overlay
zephyr/program/ocelot/ocelot_ite/: generated.dtsi  project.conf  project.overlay
zephyr/program/ocelot/ocelot_microchip/: i2c.dtsi  interrupts.dtsi  project.conf  project.overlay
zephyr/program/ocelot/ocelot_nuvoton/: generated.dtsi  project.conf  project.overlay
zephyr/program/ocelot/ocelotrvp-ite/: generated.dtsi  power_signals.dtsi  project.conf  project.overlay
zephyr/program/ocelot/ocelotrvp-mchp/: adc.dtsi  fan.dtsi  gpio.dtsi  i2c.dtsi  power_signals.dtsi  project.conf  project.overlay  temp_sensors.dtsi  vci.dtsi
zephyr/program/ocelot/ocelotrvp-npcx/: generated.dtsi  power_signals.dtsi  project.conf  project.overlay  psl.dtsi
zephyr/program/ocelot/ojal/: gpio.dtsi  project.conf  project.overlay
zephyr/program/ocelot/src/: rvp_board_id.c  rvp_board_power.c  rvp_keyboard_customization.c  rvp_usbc_runtime.c
zephyr/shim/chip/rtk/: CMakeLists.txt  clock.c  system_download_from_flash.c  system_external_storage.c
zephyr/shim/chip/rtk/include/: flash_chip.h  system_chip.h
zephyr/shim/chip/rtk/rtk_flame/: CMakeLists.txt  RTKToolChain.cmake  flash_map_backend.c  reg.h
zephyr/test/extpower/: CMakeLists.txt  Kconfig  prj.conf  testcase.yaml
zephyr/test/extpower/boards/: native_sim.overlay
zephyr/test/extpower/include/: acok_emul.h
zephyr/test/extpower/src/: acok_emul.c  extpower.c  extpower_init.c
zephyr/test/lib_math/: CMakeLists.txt  prj.conf  testcase.yaml
zephyr/test/lib_math/boards/: native_sim.overlay
(+1784 files in other folders)
